cmake_minimum_required(VERSION 3.20)
project(Arc_Andryuschenko_M_A)

set(CMAKE_C_STANDARD 17)

add_executable(Arc_Andryuschenko_M_A Source/main.cpp Source/container.cpp Source/Headers/container.h Source/movie.cpp Source/Headers/movie.h Source/cartoon.cpp Source/Headers/cartoon.h Source/gaming.cpp Source/Headers/gaming.h Source/rnd.cpp Source/Headers/rnd.h Source/documentary.cpp Source/Headers/documentary.h)
